# ncpollbook

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dockerignore  LICENSE  README.md  docker-compose.deploy.env  docker-compose.deploy.yaml  pyproject.toml  script.py
.github/workflows/: docker-publish.yml  tests.yml
apps/agent/: admin.py  api.py  cli.py  models.py  sql_agent.py  sql_examples.py  urls.py  views.py  web.py
apps/agent/fixtures/: agent_models.json  initial_models.json
apps/agent/management/commands/: agent.py
apps/agent/migrations/: 0001_initial.py
apps/ncsbe/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
apps/ncsbe/etl/: download.py  loader.py
apps/ncsbe/management/commands/: ncsbe.py
apps/ncsbe/migrations/: 0001_initial.py  0002_auto_20260324_1256.py  0003_voterview_county_name_idx_votereventview_ncid_idx.py
apps/ncsbe/templates/ncsbe/: base.html  county_registrations.html  home.html  voter_history.html
apps/ncsbe/templates/ncsbe/partials/: nc_map.html
config/: asgi.py  settings.py  urls.py
deployment/: ansible.cfg  echo-vault-pass.sh  inventory  requirements.yaml  setup.yaml
deployment/charts/ncpollbook/: Chart.yaml  values.yaml
deployment/charts/ncpollbook/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deployment/charts/ncpollbook/templates/tests/: test-connection.yaml
deployment/group_vars/: all.yaml  k8s_api.yaml  postgres.yaml
deployment/templates/: cloudflared_traefik_ingress.yaml  microk8s.default.yaml  traefik_middlewares.yaml
tests/: conftest.py  test_settings.py
tests/agent/: test_admin.py  test_agent_command.py  test_api.py  test_cli.py  test_llm_judge_evals.py  test_models.py  test_sql_agent.py  test_sql_gen_evals.py  test_views.py
tests/ncsbe/: factories.py  test_admin.py  test_download.py  test_etl.py  test_models.py  test_ncsbe_command.py  test_views.py
