[project]
name = "voter-reg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt<4.0.0",
    "boto3>=1.42.74",
    "click>=8.3.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-bolt>=0.7.4",
    "django-click>=2.5.0",
    "django-pgviews-redux>=1.2.0",
    "httpx>=0.28.1",
    "logfire[psycopg]>=4.30.0",
    "passlib>=1.7.4",
    "polars>=1.39.3",
    "psycopg>=3.3.3",
    "pydantic-ai-slim[anthropic,openai,web]>=1.70.0",
    "pydantic-monty>=0.0.8",
    # Python 3.14 is not supported by urllib3 2.4.0
    # https://github.com/crate/crate-python/issues/708
    # https://github.com/aws/containers-roadmap/issues/2638
    "urllib3<2.4.0",
]

[dependency-groups]
deploy = [
    "ansible>=13.5.0",
    "kubernetes>=35.0.0",
]
dev = [
    "factory-boy>=3.3.3",
    "pre-commit>=4.5.1",
    "pydantic-evals>=1.70.0",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["RUF012"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (likely bugs)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "DJ",   # flake8-django
    "RUF",  # ruff-specific rules
    "PLC0415", # import-outside-top-level
    "E402", # module-import-not-at-top-of-file
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in default args (common in Django)
    "DJ001",   # do not warn about null=True on string-based fields (needed for external RPA data)
    "SIM102",  # collapsible if (often hurts readability)
    "SIM108",  # ternary operator (often hurts readability)
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.uv]
default-groups = ["dev", "deploy"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not llm'"
markers = [
    "llm: evals that call a real LLM; skipped by default, run with -m llm",
]
